# SendEmails

./: .env.example  .gitignore  Attack_Paths_to_Azure_OpenAI.html  DeployEmail.ps1  IDE-setup.md  QUICKSTART.md  RBAC_Risk_Assessment_Leadership_Brief.html  README.md  SETUP_COMPLETE.md  Send-RandomEmails.ps1  pyproject.toml  requirements.txt
agents/: __init__.py  base_agent.py
agents/analyst_bot_01/: __init__.py  agent.py  enrichment.py  triage.py
agents/analyst_bot_01/prompts/: system.md
agents/analyst_bot_01/tests/: __init__.py
agents/hunter/: __init__.py  agent.py  query_generator.py  threat_mappings.py
agents/hunter/prompts/: system.md
agents/hunter/tests/: __init__.py
arm-templates/: Restart-SendEmailsContainer.ps1  Send-Emails.json  Send-Emails.parameters.json  mdotelemetry-deploy.json  mdotelemetry-deploy.parameters.json  send-random-emails-deploy.json  send-random-emails-deploy.parameters.json  send-random-emails-schedule.json  send-random-emails-schedule.parameters.json
queries/enrichment/: device_context.kql  user_context.kql
queries/hunting/: credential_theft.kql  lateral_movement.kql  ransomware.kql
shared/: __init__.py
shared/api_clients/: __init__.py  defender_client.py  graph_client.py  sentinel_client.py
shared/models/: __init__.py  alert.py  entity.py  hunt_result.py
shared/utils/: __init__.py  kql_validator.py  logging_config.py
tests/: __init__.py  test_api_connectivity.py  test_mcp_tools.py
