[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-soc"
version = "0.1.0"
description = "Agentic SOC Development Framework for AnalystBot01 and HUNTER agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Security Team" }
]
keywords = ["security", "soc", "agents", "sentinel", "defender"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Security Professionals",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "azure-identity>=1.15.0",
    "azure-mgmt-securityinsight>=2.0.0b2",
    "azure-monitor-query>=1.2.0",
    "msgraph-sdk>=1.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "nbformat>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/your-org/agentic-soc"
Documentation = "https://agentic-soc.readthedocs.io"
Repository = "https://github.com/your-org/agentic-soc.git"

[tool.setuptools]
packages = ["agents", "shared", "tests"]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=agents --cov=shared --cov-report=html"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
